--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   
   <body>
     <form>
-    <label>Name<input type="name"></label>
-    <label>eMail<input type="email" required></label>
+    <label>Name<input type="name" name="name"></label>
+    <label>Email<input type="email" name="email" required></label>
     <button>submit</button>
     </form>  
     
