--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <form>
     <label>Name<input type="name" name="name"></label>
     <label>Email<input type="email" name="email" required></label>
-    <button>submit</button>
+    <button type="submit">submit</button>
     </form>  
     
   <!-- חילוץ קוקיז של Channelid-->
