--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     data.append('channelid', channelid);
     
   
-    fetch('https://webhook.site/891cf6b6-445c-47bc-8c8b-12b69811aee8', {
+    fetch('https://www.fixdigital.co.il/api/v1.2/lead/addApi?projectID=9314&projectTypeID=5&clientID=1665&tenantID=82', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/x-www-form-urlencoded',
