--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
   
   <body>
     <form>
-    <label>Name<input type="name" name="name"></label>
+    <label>Name<input type="text" name="name"></label>
     <label>Email<input type="email" name="email" required></label>
+    <label>Phone<input type="text" name="phone" required></label>
     <button type="submit">submit</button>
     </form>  
     
@@ -59,6 +60,7 @@
     // פרמטרים לשליחה
     data.append('name', formData.get('name'));
     data.append('email', formData.get('email'));
+    data.append('email', formData.get('phone'));
     data.append('channelid', channelid);
     
   
